--- a/home/style/cards.css
+++ b/home/style/cards.css
@@ -7,8 +7,8 @@
     justify-content: center;
     align-items: center;
     float: left;
-    width: calc(33.33% - 10px);
-    margin: 5px;
+    width: calc(33% - 15px);
+    margin: 0.25rem;
     box-sizing: border-box;
 }
 
