--- a/home/style/home.css
+++ b/home/style/home.css
@@ -11,19 +11,11 @@
     margin-bottom: 55px;
 }
 
-.main {
-    margin: 20px;
-}
-
 .team-name {
     width: 500px;
     height: 30px;
     display: block;
     margin-right: auto;
-}
-
-.a {
-    background-color: pink;
 }
 
 .enterprise-logo {
@@ -48,7 +40,6 @@
     margin: 0;
 }
 
-
 .position-header {
     color: var(--text-color);
     display: block;
@@ -58,7 +49,7 @@
 }
 
 .footer {
-    background-color: blue;
+    background-color: var(--secondary-color);
     display: block;
     margin-top: 20px;
     flex-direction: row;
