--- a/home/style/cards.css
+++ b/home/style/cards.css
@@ -1,41 +1,28 @@
-.card {
-    background-color: var(--background-card-color);
-    border-radius: 12px;
-    border: 1px solid var(--secondary-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    float: left;
-    width: calc(33.33% - 10px);
-    margin: 5px;
+* {
     box-sizing: border-box;
-}
-
-.player {
-    padding: 0.75rem;
-}
-
-.player-img {
-    max-width: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  #roster {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem;
+  }
+  
+  .player {
+    background-color: #eaeaea;
+    margin: 1rem;
+    padding: 1rem 1.5rem;
+    width: 11rem;
+  }
+  
+  .player h2 {
+    margin-bottom: .75rem;
+  }
+  
+  .player img {
+    width: 8rem;
     height: auto;
-}
-
-.player-info {
-    text-align: center;
-}
-
-.person-fullname {
-    font-family: 'Righteous', sans-serif;
-    color: var(--text-color);
-    font-size: 1.4rem;
-}
-
-.person-jerseynumber {
-    margin: 0 auto;
-}
-
-.person-position-code {
-    display: block;
-    margin: 0 auto;
 }
