--- a/home/style/home.css
+++ b/home/style/home.css
@@ -4,16 +4,17 @@
     padding: 0;
 }
 
-
+/* HEADER */
 .header {
     display: flex;
     align-items: center;
     background-color: #0000ff;
-    margin-bottom: 55px;
+    margin-bottom: 2.25rem;
 }
 
-.main {
-    margin: 20px;
+.team-logo {
+    width: 150px;
+    height: 56px;
 }
 
 .team-name {
@@ -23,7 +24,6 @@
     margin-right: auto;
 }
 
-
 .enterprise-logo {
     width: 150px;
     display: block;
@@ -32,28 +32,13 @@
     margin: 30px;
 }
 
-.team-logo {
-    width: 150px;
-    height: 56px;
-}
+/* BODY */
 
 .body {
     background: #1b1b1b;
-    
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
 }
 
-
-.position-header {
-    color: var(--text-color);
-    display: block;
-    text-align: center;
-    font-family: Chakra Petch;
-    font-size: 3rem;
-}
+/* FOOTER */
 
 .footer {
     background-color: blue;
