--- a/home/style/home.css
+++ b/home/style/home.css
@@ -8,6 +8,7 @@
 .header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background-color: #0000ff;
     margin-bottom: 2.25rem;
 }
@@ -17,11 +18,29 @@
     height: 56px;
 }
 
-.team-name {
-    width: 500px;
-    height: 30px;
-    display: block;
-    margin-right: auto;
+.navbar {
+    display: flex;
+    list-style: none;
+}
+
+.navbar-li {
+    text-decoration: none;
+    color: var(--text-color);
+    font-family: Chakra Petch;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    margin: 0 2rem;
+}
+
+.navbar-li:hover {
+    color: var(--third-color);
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.navbar-li:not(:hover) {
+    transform: scale(1);
+    transition: 0.5s;
 }
 
 .enterprise-logo {
@@ -41,7 +60,7 @@
 /* FOOTER */
 
 .footer {
-    background-color: blue;
+    background-color: var(--secondary-color);
     display: block;
     margin-top: 20px;
     flex-direction: row;
