--- a/home/style/home.css
+++ b/home/style/home.css
@@ -62,10 +62,7 @@
 .footer {
     background-color: var(--secondary-color);
     display: block;
-    margin-top: 20px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    padding: 0.75rem;
 }
 
 .footer-text {
